Update dev deps; eslint and cs fixes; docker update; node update to v12; cs hooks; k8s resource declaration and probes
