# app/microservice/public-swagger.yml
@@ -1,40 +1,40 @@
 swagger: '2.0'
 ###############################################################################
-#                              API Information                                 
+#                              API Information
 ###############################################################################
 info:
   title: GLobal Forest Watch API
   description: |
     The Global Forest Watch API is currently in beta. Based on feedback from trusted testers, this document specifies new API changes that are currently under development. Interested in being a trusted tester? Contact the [Data Lab](mailTo:support@wri.com) at World Resources Institute.
-    
+
     All endpoints are accessible via http & https and are located at
     `https://production-api.globalforestwatch.org`.
-    
-    Forest change measures tree cover loss, tree cover gain, or forest disturbance. The following forest change data are available through the API: 
-    * University of Maryland tree cover loss & gain 
+
+    Forest change measures tree cover loss, tree cover gain, or forest disturbance. The following forest change data are available through the API:
+    * University of Maryland tree cover loss & gain
     * FORMA alerts
     * IMAZON SAD alerts
     * Terrai alerts
     * Prodes
     * Guira Loss
     * Biomass loss
-    * GLAD tree cover loss alerts 
+    * GLAD tree cover loss alerts
     * NASA VIIRs active fires.
-    
+
     Other services provided by the Api complements the ecosystem that surrounds the platform:
-    
+
     * Metadata
-    * Urthecast 
+    * Urthecast
     * Geostore
-    * OGR 
-    * Story 
-    * User 
+    * OGR
+    * Story
+    * User
     * subscription
-    
-  
+
+
     ### Forest Change - UMD Loss API
     Identifies annual deforestation in the Brazilian Amazon.
-    
+
     | Property | Value |
     | --- | --- | --- |
     | Coverage | Global land area (excluding Antarctica and other Arctic islands) |
@@ -52,7 +52,7 @@ info:
     name: MIT License (MIT)
     url: https://opensource.org/licenses/MIT
   version: "1.0.0"
-  
+
 host: staging-api.globalforestwatch.org
 
 schemes:
@@ -65,7 +65,7 @@ consumes:
 produces:
   - application/vnd.api+json
 ###############################################################################
-#                                  Security                                    
+#                                  Security
 ###############################################################################
 #securityDefinitions:
 #  UserSecurity:
@@ -76,7 +76,7 @@ produces:
 #security:
 #        - UserSecurity: []
 ###############################################################################
-#                                  Paths                                   
+#                                  Paths
 ###############################################################################
 paths:
   /umd-loss-gain:
@@ -90,19 +90,19 @@ paths:
         - application/vnd.api+json
         - application/json
       tags:
-       - UMD
+        - UMD
       parameters:
         - name: geostore
           in: query
           description: |
-            Geostore hash 
+            Geostore hash
             ```34cecd4c4809dbbec20ce40be3d1c877```
           required: true
           type: string
         - name: period
           in: query
           description: |
-            Period of time 
+            Period of time
             ```2015-01-01,2016-12-01```
           required: true
           type: string
@@ -120,14 +120,14 @@ paths:
         200:
           description: Results obteined
           examples:
-              data: 
-                type: use
-                id: f123fswse13
-                attributes:
-                  loss: 988
-                  gain: 988
-                  treeExtent: 988
-                  areaHa: 10472.639768453402
+            data:
+              type: use
+              id: f123fswse13
+              attributes:
+                loss: 988
+                gain: 988
+                treeExtent: 988
+                areaHa: 10472.639768453402
           schema:
             $ref: '#/definitions/USEAPI'
         404:
@@ -151,12 +151,12 @@ paths:
       produces:
         - application/vnd.api+json
       tags:
-       - UMD
+        - UMD
       parameters:
         - name: name
           in: path
           description: |
-            Concession type, one of  
+            Concession type, one of
             ```mining, oilpalm, fiber, logging```
           required: true
           type: string
@@ -170,7 +170,7 @@ paths:
         - name: period
           in: query
           description: |
-            Period of time 
+            Period of time
             ```2015-01-01,2016-12-01```
           required: true
           type: string
@@ -187,14 +187,14 @@ paths:
         200:
           description: Results obtained
           examples:
-              data: 
-                type: use
-                id: f123fswse13
-                attributes:
-                  loss: 988
-                  gain: 988
-                  treeExtent: 988
-                  areaHa: 10472.639768453402
+            data:
+              type: use
+              id: f123fswse13
+              attributes:
+                loss: 988
+                gain: 988
+                treeExtent: 988
+                areaHa: 10472.639768453402
           schema:
             $ref: '#/definitions/USEAPI'
         404:
@@ -218,7 +218,7 @@ paths:
       produces:
         - application/vnd.api+json
       tags:
-       - UMD
+        - UMD
       parameters:
         - name: id
           in: path
@@ -230,7 +230,7 @@ paths:
         - name: period
           in: query
           description: |
-            Period of time 
+            Period of time
             ```2015-01-01,2016-12-01```
           required: true
           type: string
@@ -248,14 +248,14 @@ paths:
         200:
           description: Results obtained
           examples:
-              data: 
-                type: use
-                id: f123fswse13
-                attributes:
-                  loss: 988
-                  gain: 988
-                  treeExtent: 988
-                  areaHa: 10472.639768453402
+            data:
+              type: use
+              id: f123fswse13
+              attributes:
+                loss: 988
+                gain: 988
+                treeExtent: 988
+                areaHa: 10472.639768453402
           schema:
             $ref: '#/definitions/USEAPI'
         404:
@@ -279,12 +279,12 @@ paths:
       produces:
         - application/vnd.api+json
       tags:
-       - UMD
+        - UMD
       parameters:
         - name: iso
           in: path
           description: |
-            ISO-3 country code 
+            ISO-3 country code
             ``` BRA ```
           required: true
           type: string
@@ -293,7 +293,7 @@ paths:
         - name: period
           in: query
           description: |
-            Period of time 
+            Period of time
             ```2015-01-01,2016-12-01```
           required: true
           type: string
@@ -311,17 +311,17 @@ paths:
         200:
           description: Results obtained
           examples:
-              data: 
-                type: use
-                id: f123fswse13
-                attributes:
-                  loss: 988
-                  gain: 988
-                  treeExtent: 988
-                  areaHa: 10472.639768453402
-                  
+            data:
+              type: use
+              id: f123fswse13
+              attributes:
+                loss: 988
+                gain: 988
+                treeExtent: 988
+                areaHa: 10472.639768453402
+
           schema:
-           $ref: '#/definitions/USEAPI'
+            $ref: '#/definitions/USEAPI'
         404:
           description: Geostore not found
           schema:
@@ -343,12 +343,12 @@ paths:
       produces:
         - application/vnd.api+json
       tags:
-       - UMD
+        - UMD
       parameters:
         - name: iso
           in: path
           description: |
-            ISO-3 country code 
+            ISO-3 country code
             ``` BRA ```
           required: true
           type: string
@@ -357,14 +357,14 @@ paths:
         - name: id1
           in: path
           description: |
-            numeric code for admin 1 region code based on GADM 2 
+            numeric code for admin 1 region code based on GADM 2
             ``` 2 ```
           required: true
           type: integer
         - name: period
           in: query
           description: |
-            Period of time 
+            Period of time
             ```2015-01-01,2016-12-01```
           required: true
           type: string
@@ -395,7 +395,7 @@ paths:
           description: unexpected error
           schema:
             $ref: '#/definitions/Errors'
-            
+
   /umd-loss-gain/admin/ifl/{iso}:
     get:
       description: |
@@ -409,7 +409,7 @@ paths:
         - name: iso
           in: path
           description: |
-            ISO-3 country code 
+            ISO-3 country code
             ``` BRA ```
           required: true
           type: string
@@ -428,7 +428,7 @@ paths:
         200:
           description: Results obtained
           examples:
-              data:
+            data:
               - type: umdIfl
                 id: undefined
                 attributes:
@@ -607,7 +607,7 @@ paths:
         - name: iso
           in: path
           description: |
-            ISO-3 country code 
+            ISO-3 country code
             ``` BRA ```
           required: true
           type: string
@@ -861,9 +861,9 @@ definitions:
       meta:
         type: object
         description: A meta object containing non-standard meta-information about the error.
-#############################################################################
-#                            Models                                
-#############################################################################
+  #############################################################################
+  #                            Models
+  #############################################################################
 
   USEAPI:
     type: object
