# app/src/serializers/elasticSerializer.js
@@ -1,20 +1,34 @@
-'use strict';
+const JSONAPISerializer = require('jsonapi-serializer').Serializer;
 
-var logger = require('logger');
-var JSONAPISerializer = require('jsonapi-serializer').Serializer;
-var elasticSerializer = new JSONAPISerializer('umd-loss-gain', {
+const elasticSerializer = new JSONAPISerializer('umd-loss-gain', {
 
     attributes: ['gadm', 'iso', 'adm1', 'adm2', 'thresh', 'polyname', 'period', 'totals', 'years', 'downloadUrls'],
     totals: {
-        attributes: ['areaHa', 'extent2000', 'extent2000Perc', 'extent2010', 'extent2010Perc', 'gain', 'gainPerc', 'biomassDensity', 'loss', 'lossPerc', 'emissions', 'emissionsPerc', 'biomassLoss', 'biomassLossPerc', 'gladAlerts']
+        attributes: [
+            'areaHa',
+            'extent2000',
+            'extent2000Perc',
+            'extent2010',
+            'extent2010Perc',
+            'gain',
+            'gainPerc',
+            'biomassDensity',
+            'loss',
+            'lossPerc',
+            'emissions',
+            'emissionsPerc',
+            'biomassLoss',
+            'biomassLossPerc',
+            'gladAlerts'
+        ]
     },
     years: {
         attributes: ['year', 'loss', 'lossPerc', 'emissions', 'emissionsPerc', 'biomassLoss', 'biomassLossPerc']
     },
-    'downloadUrls': {
+    downloadUrls: {
         attributes: ['url', 'xlsx']
     },
-    typeForAttribute: function (attribute, record) {
+    typeForAttribute(attribute) {
         return attribute;
     },
     keyForAttribute: 'camelCase'
@@ -25,6 +39,7 @@ class ElasticSerializer {
     static serialize(data) {
         return elasticSerializer.serialize(data);
     }
+
 }
 
 module.exports = ElasticSerializer;
